tests/positive/pr113_tuple_destructure.safe
-- Test: pr113_tuple_destructure
-- Description: Tuple returns, tuple field access, and local destructuring.
-- Expected: ACCEPT

package pr113_tuple_destructure

   function lookup (flag : boolean) returns (boolean, integer)

      if flag
         return (true, 7)

      return (false, 0)

   function read_second returns integer
      direct : (boolean, integer) = lookup (false)

      (found, value) : (boolean, integer) = lookup (true)
      if found
         return value

      return direct.2
