tests/negative/neg_pr114_legacy_elsif.safe
-- Test: neg_pr114_legacy_elsif
-- Description: PR11.4 requires else if and rejects legacy elsif chains.
-- Expected: REJECT source_frontend_error

package neg_pr114_legacy_elsif

   function classify (value : integer) returns integer

      if value > 0
         return 1
      elsif value < 0 then
         return -1
      else
         return 0

